--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "babel-core": "^7.0.0-0",
+        "babel-loader": "^7.1.5"
     }
 }
